src/test/deca/context/invalid/declaVariable-doubleDeclaration.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11: Variable déclarée deux fois
//
// Historique:
//    Créé le 10/01/2024

{
   int a = 5;
   int a = 2;
}
